syntax = "proto3";

package max;

option java_package = "com.proto.max";
option java_multiple_files = true;

message MaxRequest{
  int32 number = 1;
}

message  MaxResponse{
  int32  current_max = 1;
}


service FindMaxService {
  rpc FindMax(stream MaxRequest) returns (stream MaxResponse){};
}